<resources>
    <string name="app_name">feed2</string>
    <string name="action_menu">menu</string>
    <string name="source">source</string>
    <string name="pubDate">5/10/2220</string>
    <string name="news_picture">news_picture</string>
    <string name="title">title</string>
    <string name="News_list">news</string>
    <string name="textview">TextView</string>
    <string name="hespress">hepress</string>
    <string name="nytimes">nytimes</string>
</resources>
