<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/picture"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/news_picture" />
    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/source"
        android:textSize="14sp"
        android:background="@android:color/holo_green_dark"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp" />

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:typeface="serif"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/pubDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pubDate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/colorPressedHighlight"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="3dp" />


</RelativeLayout>